--- a/src/renderer/src/assets/css/colors.palette.css
+++ b/src/renderer/src/assets/css/colors.palette.css
@@ -60,37 +60,48 @@
   --color-gray-indicator: #9f8968;
   --color-gray-track: #9f8968;
 
-  --color-accent-1: #fdfcff;
-  --color-accent-2: #fbf7ff;
-  --color-accent-3: #f6edff;
-  --color-accent-4: #f0e2ff;
-  --color-accent-5: #e8d4ff;
-  --color-accent-6: #dec4fc;
-  --color-accent-7: #d0adf6;
-  --color-accent-8: #bf90ee;
-  --color-accent-9: #ba8be9;
-  --color-accent-10: #ae80dd;
-  --color-accent-11: #7c4ea7;
-  --color-accent-12: #441a65;
+  --color-accent-1: #fffbfe;
+  --color-accent-2: #fff5fc;
+  --color-accent-3: #ffe4f9;
+  --color-accent-4: #ffd4f4;
+  --color-accent-5: #ffc4ee;
+  --color-accent-6: #ffb1e5;
+  --color-accent-7: #ff99da;
+  --color-accent-8: #fa77ce;
+  --color-accent-9: #f471c8;
+  --color-accent-10: #e765bc;
+  --color-accent-11: #b4358e;
+  --color-accent-12: #6d0051;
 
-  --color-accent-a1: #5500ff03;
-  --color-accent-a2: #8000ff08;
-  --color-accent-a3: #8000ff12;
-  --color-accent-a4: #7c00ff1d;
-  --color-accent-a5: #7701ff2b;
-  --color-accent-a6: #7101f33b;
-  --color-accent-a7: #6d00e452;
-  --color-accent-a8: #6c00d86f;
-  --color-accent-a9: #6800cf74;
-  --color-accent-a10: #5d00bb7f;
-  --color-accent-a11: #420080b1;
-  --color-accent-a12: #2f0054e5;
+  --color-accent-a1: #ff00c004;
+  --color-accent-a2: #ff00b30a;
+  --color-accent-a3: #ff00c71b;
+  --color-accent-a4: #ff01be2b;
+  --color-accent-a5: #ff01b63b;
+  --color-accent-a6: #ff00aa4e;
+  --color-accent-a7: #ff00a366;
+  --color-accent-a8: #f600a488;
+  --color-accent-a9: #ec009d8e;
+  --color-accent-a10: #d800909a;
+  --color-accent-a11: #a00070ca;
+  --color-accent-a12: #6d0051;
 
-  /* TODO: move these to colors.tokens.css */
   --color-accent-contrast: #fff;
-  --color-accent-surface: #faf5ffcc;
-  --color-accent-indicator: #ba8be9;
-  --color-accent-track: #ba8be9;
+  --color-accent-surface: #fff3fbcc;
+  --color-accent-indicator: #f471c8;
+  --color-accent-track: #f471c8;
+}
+
+:root, .light, .light-theme {
+
+}
+
+@supports (color: color(display-p3 1 1 1)) {
+  @media (color-gamut: p3) {
+    :root, .light, .light-theme {
+
+    }
+  }
 }
 
 .dark,
@@ -224,37 +235,36 @@
       --color-gray-indicator: oklch(64.1% 0.0527 77.7);
       --color-gray-track: oklch(64.1% 0.0527 77.7);
 
-      --color-accent-1: oklch(99.3% 0.0044 306.2);
-      --color-accent-2: oklch(98.2% 0.0105 306.2);
-      --color-accent-3: oklch(95.9% 0.0277 306.2);
-      --color-accent-4: oklch(93.3% 0.0445 306.2);
-      --color-accent-5: oklch(90.1% 0.062 306.2);
-      --color-accent-6: oklch(86% 0.0811 306.2);
-      --color-accent-7: oklch(80.4% 0.1065 306.2);
-      --color-accent-8: oklch(73.3% 0.1408 306.2);
-      --color-accent-9: oklch(71.8% 0.1408 306.2);
-      --color-accent-10: oklch(68.1% 0.1408 306.2);
-      --color-accent-11: oklch(51.6% 0.1408 306.2);
-      --color-accent-12: oklch(32.2% 0.126 306.2);
+      --color-accent-1: oklch(99.4% 0.0072 342.2);
+      --color-accent-2: oklch(98.3% 0.0159 342.2);
+      --color-accent-3: oklch(95.5% 0.0468 342.2);
+      --color-accent-4: oklch(92.6% 0.0718 342.2);
+      --color-accent-5: oklch(89.5% 0.0938 342.2);
+      --color-accent-6: oklch(85.7% 0.1163 342.2);
+      --color-accent-7: oklch(80.9% 0.1455 342.2);
+      --color-accent-8: oklch(74.9% 0.1875 342.2);
+      --color-accent-9: oklch(73.1% 0.1875 342.2);
+      --color-accent-10: oklch(69.4% 0.1875 342.2);
+      --color-accent-11: oklch(54.7% 0.1875 342.2);
+      --color-accent-12: oklch(34.7% 0.1875 342.2);
 
-      --color-accent-a1: color(display-p3 0.349 0.0235 1 / 0.012);
-      --color-accent-a2: color(display-p3 0.3882 0.0196 0.8784 / 0.032);
-      --color-accent-a3: color(display-p3 0.3961 0.0078 0.9451 / 0.071);
-      --color-accent-a4: color(display-p3 0.4157 0.0039 0.9333 / 0.114);
-      --color-accent-a5: color(display-p3 0.3843 0.0039 0.9294 / 0.165);
-      --color-accent-a6: color(display-p3 0.3647 0.0039 0.8824 / 0.228);
-      --color-accent-a7: color(display-p3 0.349 0.0039 0.8275 / 0.318);
-      --color-accent-a8: color(display-p3 0.349 0.0039 0.7922 / 0.428);
-      --color-accent-a9: color(display-p3 0.3333 0.0039 0.7569 / 0.448);
-      --color-accent-a10: color(display-p3 0.298 0.0039 0.6824 / 0.491);
-      --color-accent-a11: color(display-p3 0.2118 0 0.4706 / 0.687);
-      --color-accent-a12: color(display-p3 0.1529 0 0.3059 / 0.891);
+      --color-accent-a1: color(display-p3 0.7569 0.0235 0.7569 / 0.016);
+      --color-accent-a2: color(display-p3 0.8078 0.0235 0.7098 / 0.04);
+      --color-accent-a3: color(display-p3 0.8078 0.0039 0.7333 / 0.102);
+      --color-accent-a4: color(display-p3 0.8314 0.0039 0.6863 / 0.161);
+      --color-accent-a5: color(display-p3 0.8431 0.0039 0.6706 / 0.224);
+      --color-accent-a6: color(display-p3 0.8549 0.0039 0.6157 / 0.295);
+      --color-accent-a7: color(display-p3 0.8588 0.0039 0.5882 / 0.381);
+      --color-accent-a8: color(display-p3 0.8392 0 0.5922 / 0.506);
+      --color-accent-a9: color(display-p3 0.8 0 0.5608 / 0.526);
+      --color-accent-a10: color(display-p3 0.7255 0 0.5137 / 0.573);
+      --color-accent-a11: color(display-p3 0.5373 0 0.3961 / 0.753);
+      --color-accent-a12: color(display-p3 0.349 0 0.2627 / 0.938);
 
-      /* TODO: move these to colors.tokens.css */
       --color-accent-contrast: #fff;
-      --color-accent-surface: color(display-p3 0.9765 0.9647 0.9961 / 0.8);
-      --color-accent-indicator: oklch(71.8% 0.1408 306.2);
-      --color-accent-track: oklch(71.8% 0.1408 306.2);
+      --color-accent-surface: color(display-p3 1 0.9569 0.9882 / 0.8);
+      --color-accent-indicator: oklch(73.1% 0.1875 342.2);
+      --color-accent-track: oklch(73.1% 0.1875 342.2);
     }
 
     .dark,
