--- a/src/renderer/src/assets/css/fonts.css
+++ b/src/renderer/src/assets/css/fonts.css
@@ -1,63 +1,43 @@
 @font-face {
-  font-family: 'Geliat';
-  src: url('../fonts/geliat/Geliat-AltRegular.otf') format('opentype');
-  font-weight: 400;
-  font-style: normal;
+  font-family: 'VisbyCF';
+  src: url('../fonts/visby/VisbyCF-Heavy.woff2') format('woff2'),
+  url('../fonts/visby/VisbyCF-Heavy.woff') format('woff');
+  font-weight: 900;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Geliat';
-  src: url('../fonts/geliat/Geliat-AltItalic.otf') format('opentype');
-  font-weight: 400;
-  font-style: italic;
+  font-family: 'VisbyCF';
+  src: url('../fonts/visby/VisbyCF-Bold.woff2') format('woff2'),
+  url('../fonts/visby/VisbyCF-Bold.woff') format('woff');
+  font-weight: 800;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Geliat';
-  src: url('../fonts/geliat/Geliat-AltMedium.otf') format('opentype');
-  font-weight: 500;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Geliat';
-  src: url('../fonts/geliat/Geliat-AltMediumItalic.otf') format('opentype');
-  font-weight: 500;
-  font-style: italic;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Geliat';
-  src: url('../fonts/geliat/Geliat-AltSemiBold.otf') format('opentype');
+  font-family: 'VisbyCF';
+  src: url('../fonts/visby/VisbyCF-DemiBold.woff2') format('woff2'),
+  url('../fonts/visby/VisbyCF-DemiBold.woff') format('woff');
   font-weight: 600;
-  font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Geliat';
-  src: url('../fonts/geliat/Geliat-AltSemiBoldItalic.otf') format('opentype');
-  font-weight: 600;
-  font-style: italic;
+  font-family: 'VisbyCF';
+  src: url('../fonts/visby/VisbyCF-Medium.woff2') format('woff2'),
+  url('../fonts/visby/VisbyCF-Medium.woff') format('woff');
+  font-weight: 500;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Geliat';
-  src: url('../fonts/geliat/Geliat-AltBold.otf') format('opentype');
-  font-weight: 700;
-  font-style: normal;
+  font-family: 'VisbyCF';
+  src: url('../fonts/visby/VisbyCF-Regular.woff2') format('woff2'),
+  url('../fonts/visby/VisbyCF-Regular.woff') format('woff');
+  font-weight: 400;
   font-display: swap;
 }
 
-@font-face {
-  font-family: 'Geliat';
-  src: url('../fonts/geliat/Geliat-AltBoldItalic.otf') format('opentype');
-  font-weight: 700;
-  font-style: italic;
-  font-display: swap;
+:root {
+  --font-sans: 'VisbyCF';
 }
