--- a/src/renderer/src/assets/css/main.css
+++ b/src/renderer/src/assets/css/main.css
@@ -2,3 +2,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  body {
+    font-optical-sizing: auto;
+    text-rendering: optimizeLegibility;
+  }
+}
