--- a/src/renderer/src/assets/css/main.css
+++ b/src/renderer/src/assets/css/main.css
@@ -5,7 +5,7 @@
 
 @layer base {
   body {
-    @apply text-primary;
+    @apply text-primary border-line;
     font-optical-sizing: auto;
     text-rendering: optimizeLegibility;
   }
